fix spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -628,18 +628,18 @@ small {
   }
 
   .NewsFeedOn a {
-    font-size: 2.5vh;
-    line-height: 4vw !important;
+    font-size: 5vw;
+    line-height: 5vw;
   }
 
   .NewsFeedOn p {
-    font-size: 2vh;
-    line-height: 2.3vw !important;
+    font-size: 4vw;
+    line-height: 4vw;
   }
 
-  .NewsFeedOn small {
-    font-size: 2vh;
-    line-height: 2vw !important;
+  small {
+    font-size: 3vw;
+    line-height: 3vw;
   }
   .BDStandard {
     height: 250vh;
@@ -668,7 +668,7 @@ small {
 
 @media only screen and (min-width: 751px) and (max-width: 1200px) {
   .NewsFeedOn h1 {
-    line-height: 4.5vh !important;
+    line-height: 4.5vh;
   }
 }
 
